2014-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-toggle-header): Display header attachment
	buttons when toggling the header off.

2014-03-14  Juanma Barranquero  <lekktu@gmail.com>

	* tls.el (tls-program): Reflow docstring.

2014-03-07  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-accept-article): Make respooling to nnimap
	groups work again.

2014-03-07  George McNinch  <gmcninch@gmail.com>  (tiny change)

	* nnir.el (nnir-run-namazu): Parse namazu results that are larger than
	999 correctly (i.e. "1,342").

2014-03-07  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-agent.el (gnus-agent-update-files-total-fetched-for): Don't bug
	out if the directory doesn't exist.

2014-03-07  Daiki Ueno  <ueno@gnu.org>

	* mml2015.el (mml2015-use): Don't check the availability of GnuPG
	commands here; instead, only check if epg-config.el is available.

2014-03-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* mml.el (mml-expand-html-into-multipart-related): Allow sending HTML
	messages with embedded images.
	(mml-generate-mime): Don't bug out if you don't have libxml.

2014-03-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-make-html-message-with-image-files): New command.

2014-03-05  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-make-group): Clarify prompt.

	* mml.el (mml-insert-mime-headers): Allow `recipient-filename'.

2014-02-23  David Engster  <deng@randomsample.de>

	* auth-source.el (auth-source-netrc-saver): Do not depend on `cl-lib'
	to stay compatible with older Emacsen, so replace `cl-loop' with
	`loop'.

2014-02-22  Daniel Colascione  <dancol@dancol.org>

	* auth-source.el (auth-source-secrets-listify-pattern): New function.
	(auth-source-secrets-search): Don't pass invalid patterns to secrets.el;
	instead, build list of patterns.

2014-02-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-prepare, gnus-article-prepare-display):